Fix video on mobile. Change to play button.

--- a/docroot/themes/gavias_kiamo/css/custom.css
+++ b/docroot/themes/gavias_kiamo/css/custom.css
@@ -316,3 +316,12 @@ ul.menu.no-bullets > li a:after {
     font-size: 8px !important;
   }
 }
+
+.rs-fullvideo-cover {
+  display: none;
+}
+
+.is-mobile .rs-background-video-layer iframe {
+  visibility: visible !important;
+  opacity: 1 !important;
+}
